fixtures/type_errors/function_has_incorrect_return_type.tl
type Bool { True, False }

f : Int -> Int {
  x -> True
}
